RESOLVED FIXED224611
calc() should not contain 0 values other than percentages
https://bugs.webkit.org/show_bug.cgi?id=224611
Summary calc() should not contain 0 values other than percentages
Antoine Quint
Reported 2021-04-15 09:31:06 PDT
calc() should not contain 0 values other than percentages
Attachments
Patch (20.64 KB, patch)
2021-04-15 09:46 PDT, Antoine Quint
no flags
Antoine Quint
Comment 1 2021-04-15 09:46:36 PDT
EWS Watchlist
Comment 2 2021-04-15 09:48:47 PDT
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see https://trac.webkit.org/wiki/WPTExportProcess
EWS
Comment 3 2021-04-15 12:39:36 PDT
Committed r276052 (236585@main): <https://commits.webkit.org/236585@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 426111 [details].
Radar WebKit Bug Importer
Comment 4 2021-04-15 12:40:25 PDT
Note You need to log in before you can comment on or make changes to this bug.