Source/WebCore/css/CSSCalculationValue.cpp
@@ -1408,7 +1408,7 @@ void CSSCalcOperationNode::buildCSSText(const CSSCalcExpressionNode& node, Strin
             auto& operationNode = downcast<CSSCalcOperationNode>(rootNode);
             return operationNode.isCalcSumNode() || operationNode.isCalcProductNode();
         }
-        return true;
+        return !is<CSSCalcPrimitiveValueNode>(rootNode);
     };
     
     bool outputCalc = shouldOutputEnclosingCalc(node);
@@ -1937,7 +1937,7 @@ static Vector<Ref<CSSCalcExpressionNode>> createCSS(const Vector<std::unique_ptr
     for (auto& node : nodes) {
         auto cssNode = createCSS(*node, style);
         if (!cssNode)
-            return { };
+            continue;
         values.uncheckedAppend(cssNode.releaseNonNull());
     }
     return values;
@@ -1950,8 +1950,12 @@ static RefPtr<CSSCalcExpressionNode> createCSS(const CalcExpressionNode& node, c
         float value = downcast<CalcExpressionNumber>(node).value(); // double?
         return CSSCalcPrimitiveValueNode::create(CSSPrimitiveValue::create(value, CSSUnitType::CSS_NUMBER));
     }
-    case CalcExpressionNodeType::Length:
-        return createCSS(downcast<CalcExpressionLength>(node).length(), style);
+    case CalcExpressionNodeType::Length: {
+        auto& length = downcast<CalcExpressionLength>(node).length();
+        if (!length.isPercent() && length.isZero())
+            return nullptr;
+        return createCSS(length, style);
+    }
 
     case CalcExpressionNodeType::Negation: {
         auto childNode = createCSS(*downcast<CalcExpressionNegation>(node).child(), style);
@@ -1975,6 +1979,8 @@ static RefPtr<CSSCalcExpressionNode> createCSS(const CalcExpressionNode& node, c
             auto children = createCSS(operationChildren, style);
             if (children.isEmpty())
                 return nullptr;
+            if (children.size() == 1)
+                return WTFMove(children[0]);
             return CSSCalcOperationNode::createSum(WTFMove(children));
         }
         case CalcOperator::Subtract: {
@@ -1984,13 +1990,14 @@ static RefPtr<CSSCalcExpressionNode> createCSS(const CalcExpressionNode& node, c
             values.reserveInitialCapacity(operationChildren.size());
             
             auto firstChild = createCSS(*operationChildren[0], style);
-            if (!firstChild)
-                return nullptr;
-
             auto secondChild = createCSS(*operationChildren[1], style);
+
             if (!secondChild)
-                return nullptr;
+                return firstChild;
+
             auto negateNode = CSSCalcNegateNode::create(secondChild.releaseNonNull());
+            if (!firstChild)
+                return negateNode;
 
             values.append(firstChild.releaseNonNull());
             values.append(WTFMove(negateNode));
